Добавлены модели данных

--- a/TestTaskWevService/TestTaskWevService.csproj
+++ b/TestTaskWevService/TestTaskWevService.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
+    <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
