--- a/TestTaskWevService.Tests/TestTaskWevService.Tests.csproj
+++ b/TestTaskWevService.Tests/TestTaskWevService.Tests.csproj
@@ -53,7 +53,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fakes\FakeDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestClasses\MainServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestTaskWevService\TestTaskWevService.csproj">
