--- a/TestTaskWevService.Tests/TestTaskWevService.Tests.csproj
+++ b/TestTaskWevService.Tests/TestTaskWevService.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Fakes\FakeDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestClasses\MainServiceTests.cs" />
+    <Compile Include="TestClasses\RestDataProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestTaskWevService\TestTaskWevService.csproj">
