--- a/TestTaskWevService/TestTaskWevService.csproj
+++ b/TestTaskWevService/TestTaskWevService.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Models\Entities\Entity.cs" />
     <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\RestDataProvider.cs" />
     <Compile Include="Services\MainService.cs" />
   </ItemGroup>
   <ItemGroup>
